--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -20,19 +20,25 @@
                   <a href="/">home</a>
 
                 </li>
-                <li>
 
-                    <a href="/tasks">tasks</a>
-  
-                  </li>
                   
-                    
                     {% if user.is_authenticated %}
                     <li>
 
                         <a href="/logout">Logout</a>
       
                       </li>
+
+                      <li>
+
+                        <a href="/tasks">tasks</a>
+      
+                      </li>  
+                      <li>
+
+                        <a href="/tasks/create/">Create task</a>
+      
+                      </li> 
                       {% else %}
                       <li>
                         <a href="/signup">signup</a>
