--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -5,15 +5,19 @@
 <ul>
     {% for task in tasks%}
     <li>
+       <a href="{% url 'task_detail' task.id %}">
         {% if tasks.important %}
-        <h1>{{task.title}} </h1>
+        <strong>{{task.title}} </strong>
+        {% else %}
+        {{task.title}}
         {% endif %}
         <p>{{task.description}} </p>
         <p>{{task.user.username }}</p>
         <p> {{tasks.important}}</p>
 
+       </a>
 
-s
+
         </li>
 
     {% endfor %}
