--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,13 +1,13 @@
 {% extends 'base.html'%}
 
 {% block content%}
-<h1>Tasks</h1>
+<h1>Tasks Pending</h1>
 <ul>
     {% for task in tasks%}
     <li>
        <a href="{% url 'task_detail' task.id %}">
         {% if tasks.important %}
-        <strong>{{task.title}} </strong>
+        <strong> {{task.title}} </strong>
         {% else %}
         {{task.title}}
         {% endif %}
