Highing immportant has been fixed as well as a route for completed tasks has been added

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -31,7 +31,12 @@
 
                       <li>
 
-                        <a href="/tasks">tasks</a>
+                        <a href="{% url 'tasks' %}">Tasks pending</a>
+      
+                      </li>  
+                      <li>
+
+                        <a href="{% url 'tasks_completed' %}">Tasks completed</a>
       
                       </li>  
                       <li>
