--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -6,14 +6,16 @@
     {% for task in tasks%}
     <li>
        <a href="{% url 'task_detail' task.id %}">
-        {% if tasks.important %}
+        {% if task.important %}
         <strong> {{task.title}} </strong>
         {% else %}
         {{task.title}}
         {% endif %}
         <p>{{task.description}} </p>
         <p>{{task.user.username }}</p>
-        <p> {{tasks.important}}</p>
+
+        <p>{{task.date_completed|date:'M j Y:i'}} </p>
+        
 
        </a>
 
