--- a/tasks/templates/create_task.html
+++ b/tasks/templates/create_task.html
@@ -1,21 +1,28 @@
 {% extends 'base.html' %}
-
-
-
-
 {% block content %}
-<h1> Create Tasks </h>
 
-{{error}}    
+<main class='container'>
+    <div class='row'> 
+        <div class='col-md-4 offset-md-4 mt-5'>
+                <form action="/tasks/create/" method="POST" class='card card-body'>
+                    <h1> Create Tasks </h>
 
-<form action="/tasks/create/" method="POST">
-{% csrf_token %}
-{{form}}
-<button>
-Save
+                {{error}}    
+                {% csrf_token %}
+                {{form}}
+                <br>
+                <div class='text-center'>
+                    <button class='btn btn-primary '>
+                        Save
+                     </button> 
+                </div>       
+                
+                
+                 </form>
 
-<button>    
 
-
- </form>
+        </div>
+    </div>
+        
+</main>    
 {% endblock %}
