--- a/tasks/templates/task_detail.html
+++ b/tasks/templates/task_detail.html
@@ -2,25 +2,38 @@
 
 
 {% block content %}
-<h1>{{task.title}}</h1>
+<main class='container'>
+    <div class='row'>
+        <div class='col-md-4 offset-md-4'>
+            <h1 class='text-secondary'>{{task.title}}</h1>
 {{error}}
 <form method='POST'>
     {% csrf_token %}
     {{form.as_p}}
-    <button>
+ 
+    <button class='btn btn-primary'>
         Update 
     </button>    
 </form>    
-<form action='{% url 'complete_task' task.id %}' method='POST'> 
-    {% csrf_token %}
-    <button> complete </button>
+<div class='mt-5 d-flex'>
+   
+    <form action='{% url 'complete_task' task.id %}' method='POST'> 
+        {% csrf_token %}
+        <button class='btn btn-secondary'> complete </button>
+    
+    </form>
+    
+    <form action='{% url 'delete_task' task.id %}' method='POST'> 
+        {% csrf_token %}
+        <button class='btn btn-danger'> delete </button>
+    
+    </form>
 
-</form>
+</div>    
+        </div>
 
-<form action='{% url 'delete_task' task.id %}' method='POST'> 
-    {% csrf_token %}
-    <button> delete </button>
+    </div>
 
-</form>
 
+</main>    
 {% endblock %}
